# sysrepo-python-plugind

./: .gitignore  LICENSE  README.rst  pyproject.toml  setup.cfg  tox-install.sh  tox.ini
.github/workflows/: python-publish.yml
examples/: example-system.yang  example_system_plugin.py  pyproject.toml
src/sysrepo_python_plugind/: __init__.py  __main__.py  cli.py  daemon.py  install_yang.py  pid.py  plugin.py  sort.py
src/sysrepo_python_plugind/yang/: sysrepo-python-plugind.yang
systemd/: sysrepo-python-plugind.service
tests/: conftest.py  test_daemon.py  test_pid.py  test_sort.py
