[metadata]
name = sysrepo-python-plugind
version = 1.0.1
description = Python plugin daemon for sysrepo (replacement for sysrepo-plugind)
long_description = file: README.rst
long_description_content_type = text/x-rst
license = BSD-3-Clause
project_urls =
    Repository = https://github.com/entrypoint-communications/sysrepo-python-plugind

[options]
python_requires = >=3.10
packages = find:
package_dir =
    = src
install_requires =
    sysrepo~=2.0

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    sysrepo-python-plugind = sysrepo_python_plugind:main
    sysrepo-python-plugind-setup = sysrepo_python_plugind.install_yang:main

[options.package_data]
sysrepo_python_plugind =
    yang/*.yang

[options.extras_require]
test =
    pytest>=7
